<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.adamgibbons.onlyvansv2.ui.van.VanListFragment"
        android:label="@string/action_van"
        tools:layout="@layout/fragment_van_list" >
        <action
            android:id="@+id/action_homeFragment_to_vanDetailFragment"
            app:destination="@id/vanDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_homeFragment_to_vanAddFragment"
            app:destination="@id/vanAddFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.adamgibbons.onlyvansv2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/vanDetailFragment"
        android:name="com.adamgibbons.onlyvansv2.ui.van.VanDetailFragment"
        android:label="Van Details"
        tools:layout="@layout/fragment_van_detail" >
        <argument
            android:name="vanid"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/vanAddFragment"
        android:name="com.adamgibbons.onlyvansv2.ui.van.VanAddFragment"
        android:label="@string/action_add_van"
        tools:layout="@layout/fragment_van_add" />
</navigation>