<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.adamgibbons.onlyvansv2.ui.van.VanDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.van.VanDetailFragment"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/vanImage"
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:contentDescription="@string/currently_selected_image" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vanTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title"
                    android:layout_margin="16dp"
                    android:text="@{vm.van.title}" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vanDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:layout_margin="16dp"
                    android:text="@{vm.van.description}" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vanEngineSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vanYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vanColor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>